--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "express": "^5.1.0",
     "mongodb": "^6.17.0",
     "preact": "^10.26.8",
-    "preact-render-to-string": "^6.5.13"
+    "preact-render-to-string": "^6.5.13",
+    "sharp": "^0.32.6",
+    "uuid": "^11.1.0"
   },
   "scripts": {
-  "start": "MONGO_URI='mongodb://192.168.1.14:27017' node index.js"
-},
-"type": "module"
+    "start": "MONGO_URI='mongodb://192.168.1.14:27017' node index.js"
+  },
+  "type": "module"
 }
